--- a/src/AppUnimed/AppUnimed/AppUnimed.iOS/AppUnimed.iOS.csproj
+++ b/src/AppUnimed/AppUnimed/AppUnimed.iOS/AppUnimed.iOS.csproj
@@ -128,4 +128,7 @@
       <Name>AppUnimed</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo_unimed.png" />
+  </ItemGroup>
 </Project>
