--- a/src/AppUnimed/AppUnimed/AppUnimed/AppUnimed.csproj
+++ b/src/AppUnimed/AppUnimed/AppUnimed/AppUnimed.csproj
@@ -22,6 +22,10 @@
     <EmbeddedResource Update="Login.xaml"> 
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+
+    <EmbeddedResource Update="Menu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     
     <EmbeddedResource Update="PreCadastro.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
